@@ -5,6 +5,7 @@ Upcoming:
 - New opcode ('eval_countcrafts') to count the possible number of crafting operations given a card and an inventory
 - New opcode ('do_vector_sort') to sort a vector
 - New opcodes ('do_vector_max' and 'do_vector_min') to find the index of the largest or smallest item in a vector
+- New opcode ('eval_vector_indices') to generate a vector of integers starting with 0
 - There was a chance that a programmer would not correctly save its current program on exit. Loading the world again would revert to an older program. This has now been fixed
 
 1.9.3:
